syntax = 'proto3';
package order;

message Product {
  string title = 1;
  string author = 2;
  string genre = 3;
  int32 pages = 4;
  string publication = 5;
  double price = 6;
  int32 quantity = 7;
}

message Location {
  string address1 = 1;
  string address2 = 2;
  string city = 3;
  string state = 4;
  string postal_code = 5;
  string country = 6;
}

message Customer {
  string name = 1;
  string lastname = 2;
  string email = 3;
  Location location = 4;
  string phone = 5;
}

message OrderGRPCMessage {
  repeated Product products = 1;
  Customer customer = 2;
}

message OrderID {
  string id = 1;
}


service OrderService {
  rpc CreateOrder(OrderGRPCMessage) returns (OrderID);
}